--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="error_invalid_email">El correo es inválido</string>
     <string name="error_invalid_password">Ingrese password</string>
     <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
+    <string name="error_field_required">Campo obligatorio</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
 
     <!-- String Formulario Registro -->
